qr/qr_code_styles.css
body {
    font-family: system-ui, sans-serif;
    max-width: 720px;
    min-width: fit-content;
    margin: 40px auto;
    padding: 0 16px;
}

input {
    width: 100%;
    padding: 12px;
    font-size: 16px;
    border-radius: 8px;
}

.wrap {
    margin-top: 16px;
    display: grid;
    gap: 12px;
}

img {
    border: 1px solid #ddd;
    border-radius: 8px;
}

.hint {
    color: #555;
    font-size: 14px;
    font-style: italic;
}

.buttons {
    display: flex;
    gap: 10px;
    margin-top: 12px;
    justify-content: center;
    flex-wrap: wrap;
}

.buttons button {
    background: hsl(210, 100%, 56%);
    color: white;
    padding: 10px 20px;
    font-size: 16px;
    font-weight: 600;
    border: none;
    border-radius: 25px;
    cursor: pointer;
    transition: background 0.3s ease;
    width: 49%;
}

.buttons button:active {
    transform: translateY(2px);
}

.buttons button:hover {
    background-color: hsl(211, 100%, 35%);
}

@media (max-width: 480px) {
    .buttons button {
        width: 100%;
    }
}

@media (prefers-color-scheme: dark) {
    body {
        background: #050608;
        color: #f5f5f5;
    }

    input {
        background: #222222;
        border: #555;
        color: #f5f5f5;
    }

    .hint {
        color: #d1d5db;
    }

    img {
        border: 1px solid #555;
        opacity: 75%;
    }

}

